Text Bug
Fixed the fullscreen text bug where multiple text layers were overlapping on top of eachother

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ section {
   font-family: "Times Now";
 }
 
-.fullscreen-big-text {
+#fullpage-text {
   font-size: 3vw;
   position: fixed;
   bottom: 1rem;
